Fixed splash image overflow for wide screens

--- a/src/css/splash.css
+++ b/src/css/splash.css
@@ -1,10 +1,91 @@
 .splash__profile-image--container {
   position: relative;
   height: 100%;
+  background-color: silver;
+  background-image: radial-gradient(
+      circle at 100% 150%,
+      silver 24%,
+      white 24%,
+      white 28%,
+      silver 28%,
+      silver 36%,
+      white 36%,
+      white 40%,
+      transparent 40%,
+      transparent
+    ),
+    radial-gradient(
+      circle at 0 150%,
+      silver 24%,
+      white 24%,
+      white 28%,
+      silver 28%,
+      silver 36%,
+      white 36%,
+      white 40%,
+      transparent 40%,
+      transparent
+    ),
+    radial-gradient(
+      circle at 50% 100%,
+      white 10%,
+      silver 10%,
+      silver 23%,
+      white 23%,
+      white 30%,
+      silver 30%,
+      silver 43%,
+      white 43%,
+      white 50%,
+      silver 50%,
+      silver 63%,
+      white 63%,
+      white 71%,
+      transparent 71%,
+      transparent
+    ),
+    radial-gradient(
+      circle at 100% 50%,
+      white 5%,
+      silver 5%,
+      silver 15%,
+      white 15%,
+      white 20%,
+      silver 20%,
+      silver 29%,
+      white 29%,
+      white 34%,
+      silver 34%,
+      silver 44%,
+      white 44%,
+      white 49%,
+      transparent 49%,
+      transparent
+    ),
+    radial-gradient(
+      circle at 0 50%,
+      white 5%,
+      silver 5%,
+      silver 15%,
+      white 15%,
+      white 20%,
+      silver 20%,
+      silver 29%,
+      white 29%,
+      white 34%,
+      silver 34%,
+      silver 44%,
+      white 44%,
+      white 49%,
+      transparent 49%,
+      transparent
+    );
+  background-size: 100px 50px;
 }
 
 .splash__profile-image--image {
-  width: 100%;
+  width: 85%;
+  max-height: fit-content;
 }
 
 .splash__profile-image--border {
@@ -22,7 +103,6 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
   z-index: 10; /* Specify a stack order in case you're using a different order for other elements */
-  
 
   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 2s; /* Firefox < 16 */
@@ -99,7 +179,6 @@
 }
 
 @media only screen and (max-width: 950px) {
-
   .splash__nav--container {
     margin-left: 0px;
   }
@@ -114,5 +193,11 @@
   .splash__text {
     font-size: 3em;
     overflow: hidden;
+  }
+}
+
+@media only screen and (min-width: 1000px) and  (min-height: 750px){
+  .splash__profile-image--image {
+    width: 100%;
   }
 }
